# trigger_flow

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  prod.docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 2025_09_29_1550-9bab49747b07_new.py  2025_10_24_0928-1b8da0c2b876_change_db_fields.py  2025_10_24_0941-9b05d4bde71e_change_db_fields.py  2025_10_24_1232-29f3afd64d50_change_db_fields.py  2025_10_24_1241-e00d90643836_change_db_fields.py  2025_10_24_1254-232d3732ab43_change_db_fields.py  2025_10_24_1318-8fbca39e64ed_change_db_fields.py
nginx_conf/: default.conf  nginx.conf
src/main_app/: init_app.py
src/modules/auth/configs/: crypt_conf.py
src/modules/auth/exceptions_handle/: stream_exceptions_handlers.py
src/modules/auth/repositories/: jwt_repo.py  user_repo.py
src/modules/auth/tests/: conftest.py  test_utils.py
src/modules/notifications/repository/: notification_repo.py
src/modules/notifications/services/: notification_service.py
src/modules/notifications/types/: base_type_notify_class.py  console.py  email_notification.py  notifications_types_registry.py
src/modules/rules/repository/: rules_repo.py
src/modules/rules/services/: collection_rules.py
src/modules/source/: utils.py
src/modules/source/repository/: data_source_repo.py
src/modules/source/services/: data_source_service.py  open_weather_service.py
src/shared/: base_repo.py  decorators.py  utils.py
src/shared/celery_module/: celery_worker.py  tasks.py
src/shared/configs/: celery_conf.py  get_settings.py  log_conf.py  settings.py
src/shared/db/: __init__.py  engine.py  session.py
src/shared/db/models/: api_data_source.py  (+4 more)
src/shared/services/: base_crud_service.py  base_get_service.py  fernet_service.py  jwt_service.py  redis_service.py
(+24 files in other folders)
